Fix horizontal overflow on safari mobile

--- a/src/burgermenu.scss
+++ b/src/burgermenu.scss
@@ -1,6 +1,7 @@
 // vars
 $menu-width: 273px !default;
 
+html,
 body {
   overflow-x: hidden;
 }
